--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+#Files
+src\environments\enviroment.ts
+src\environments\environment.prod.ts
+
 # Compiled output
 /dist
 /tmp
